# piishield

./: LICENSE  README.md
auto-redact/: LICENSE  Pipfile  README.md  demo.py  main.py  pyproject.toml
auto-redact/examples/: Case2.m4a  Company.m4a  Kids.m4a  Recording.m4a  bleep.json  try2.m4a  try2.m4a:Zone.Identifier
auto-redact/output/: output.mka
auto-redact/piishield/: __init__.py  cli.py
docs/gallery/: PIIShield.ai
prompts/: address.hbs  birthPlace.hbs  birthday.hbs  email.hbs  idNumber.hbs  ipAddress.hbs  name.hbs  phone.hbs  race.hbs  religion.hbs  sexualOrientation.hbs
prompts/presidio/: creditcard.hbs  date.hbs  email.hbs  ip.hbs  location.hbs  nrp.hbs  person.hbs  phone.hbs  url.hbs
prompts/tests/presidio/: nrp.jsonl
prompts/tests/recognize/: birthGender.jsonl  birthPlace.jsonl  birthday.jsonl  email.jsonl  facebook.jsonl  idNumber.jsonl  ipAddress.jsonl  name.jsonl  race.jsonl  relgiion.jsonl  sexualOrientation.jsonl  whatsApp.jsonl
prompts/tests/redact/: race.jsonl
python/: demo.py  eval.py  pyproject.toml  recognize.py
ts/: category.ts  demo.ts  package.json  pnpm-lock.yaml  recognize.ts  redact.ts
